--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -10,13 +10,19 @@
 }
 
 .customers__title {
-  margin-bottom: 50px;
+  
   font-weight: 700;
+  padding-bottom: 50px;
   font-size: 36px;
   line-height: 42px;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
+  @media screen and (max-width: 1199px) {
+    font-size: 28px;
+    line-height: 32.81px;
+    padding-bottom: 30px;
+}
 }
 
 .box {
