--- a/sass/components/_comanda.scss
+++ b/sass/components/_comanda.scss
@@ -20,6 +20,11 @@
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
+
+  @media screen and (max-width: 1199px) {
+  font-size: 28px;
+  line-height: 1.83;
+  }
 }
 
 .comanda__list {
@@ -82,7 +87,7 @@
   margin-bottom: 10px;
   color: var(--title-text-color);
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px){
     padding-top: 30px;
   }
 }
