--- a/sass/components/_feature.scss
+++ b/sass/components/_feature.scss
@@ -36,7 +36,8 @@
 }
 
 .feature__list--title {
-  font-weight: 700;
+    font-family: 'Roboto';
+    font-weight: 700;
     font-size: 14px;
     line-height: 16px;
     letter-spacing: 0.03em;
@@ -83,11 +84,11 @@
         transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
       }
 
-    @media screen and (min-width: 480px) {
+    @media screen and (max-width: 767px) {
       padding-top: 25px;
       padding-bottom: 25px;
     }  
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px) and (max-width: 1199px){
       padding-top: 25px;
       padding-bottom: 25px;
     }
