--- a/sass/components/_hero__section.scss
+++ b/sass/components/_hero__section.scss
@@ -1,6 +1,5 @@
 .hero__section {
-  max-width: 1600px;
-  height: 600px;
+
   margin-left: auto;
   margin-right: auto;
   background-size: cover;
@@ -12,6 +11,8 @@
   position: relative;
   
   @media screen and (min-width: 1200px) {
+      max-width: 1600px;
+        height: 600px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url("../images/laptop/header-img.jpg");
       @media(min-device-pixel-ratio: 2),
@@ -22,6 +23,8 @@
     }
   }
   @media screen and (max-width: 1199px) {
+      max-width: 1199px;
+      height: 400px;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
   url("../images/tablet/Header-img.jpg");
     @media(min-device-pixel-ratio: 2),
@@ -43,6 +46,14 @@
   }
 }
 
+.container__hero {
+  @media screen and (max-width: 1200px) {
+    padding: 200px 0;
+  }
+  @media screen and (max-width: 1199px) {
+    padding: 118px 0;
+  }
+}
 .hero__title {
   color: var(--primary-white-color);
   font-family: Roboto;
