--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -6,6 +6,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  background: rgba(0, 0, 0, 0.2);
   padding: 30px 15px;
   overflow-y: scroll;
 }
@@ -30,7 +31,7 @@
   transform: translate(-50%, -50%);
   border-radius: 14px;
   background-color: var(--primary-white-color);
-  padding: 40px 40px 0;
+  padding: 40px 40px;
 
 @media screen and (max-width: 520px) {
   margin-top: 93px;
@@ -43,16 +44,16 @@
 @media screen  and (min-width: 521px) and (max-width: 1199px) {
   margin-top: 93px;
   position:fixed;
-  top: 45%;
-  left: 46%;
+  top: 300px;
+  left: 50%;
   width: 370px;
-  margin: 93px 15px 50px 15px;
+
 }
        
 @media screen and (min-width: 1200px) {
   margin-top: 203px;
   position: absolute;
-  top: 75%;
+  top: 208px;
   left: 50%;
   min-width: 528px;
   
