--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -1,10 +1,13 @@
 /* <-- група послуг --> */
 
 .services {
-  @media screen and (max-width: 1199px) {
+  @media screen and (min-width: 768px) {
+    padding-top: 30px;
     padding-bottom: 60px;
   }
+
   @media screen and (min-width: 1200px) {
+    padding-top: 50px;
     padding-bottom: 94px;
   }
 }
@@ -12,8 +15,13 @@
 .services__list {
   display: flex;
   flex-wrap: wrap;
-  margin: -15px;
   @media screen and (max-width: 767px) {
+    margin: 0;
+  }
+  @media screen and (min-width: 768px) {
+      margin: -15px;
+  }
+  @media screen and (min-width: 1200px) {
     margin: 0;
   }
 }
