--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -16,10 +16,12 @@
   display: flex;
   flex-wrap: wrap;
   @media screen and (max-width: 767px) {
-    margin: 0;
+    margin: 0 ;
+    padding-bottom: 60px;
   }
   @media screen and (min-width: 768px) {
-      margin: -15px;
+      margin-right: -15px;
+      margin-left: -15px;
   }
   @media screen and (min-width: 1200px) {
     margin: 0;
