--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -254,7 +254,7 @@ overflow-y: scroll;
 @media screen and (max-width: 767px) {
   padding-top: 48px;
   padding-left: 40px;
-  padding-bottom: 302px;
+  padding-bottom: 100%;
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   margin-left: 88px;
@@ -267,8 +267,7 @@ overflow-y: scroll;
 }
 
 .page-header__list--contact {
-
-  position: relative;
+position: relative;
 @media screen and (max-width: 767px) {
   display: none;
 }
