--- a/sass/components/_comanda.scss
+++ b/sass/components/_comanda.scss
@@ -12,7 +12,6 @@
 }
 
 .comanda__title {
-  margin-bottom: 50px;
   font-family: "Roboto";
   font-weight: 700;
   font-size: 36px;
@@ -24,7 +23,11 @@
   @media screen and (max-width: 1199px) {
   font-size: 28px;
   line-height: 1.83;
+  padding-bottom: 30px;
   }
+  @media screen and (min-width: 1200px) {
+  padding-bottom: 50px;
+}
 }
 
 .comanda__list {
