--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -10,6 +10,7 @@ display: block;
 }
 
 .page-header__nav {
+  
   @media screen and (max-width:767px) {
   display: block;
   position:inherit;
@@ -233,9 +234,10 @@ line-height: 1.17;
 .page-header__menu.is-hidden {
 display: block;
 @media screen and (max-width: 767px){
-position: absolute;
+position: fixed;
 top: 0;
 left: 0;
+height: 100%;
 width: 100%;
 background-color: #ffffff;
 text-align: center;
@@ -250,14 +252,33 @@ overflow-y:scroll;
 }
 }
 
+.containers {
+    position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 100%;
+      padding-left: 40px;
+      padding-right: 40px;
+  
+      @media screen and (max-width: 479px) {
+        padding-left: calc(20px + 1vw);
+        padding-right: calc(20px + 1vw);
+      }
+    }
+
+    .mob-menu-Link {
+      display: block;
+    }
+
 .page-header__list--nav {
 @media screen and (max-width: 767px) {
   padding-top: 48px;
   padding-left: 40px;
-  padding-bottom: 100%;
+
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  margin-left: 88px;
+  margin-left: 48px;
   padding-top: 32px;
   }
 @media screen and (min-width: 1200px) {
