--- a/css/styles.css
+++ b/css/styles.css
@@ -2051,7 +2051,7 @@ summary {
 }
 
 .services__name {
-  font-family: "Roboto";
+  font-family: Roboto;
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
