--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -125,7 +125,7 @@
 }
 
 .services__name {
-  font-family: 'Roboto';
+  font-family: Roboto;
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
